--- a/index.html
+++ b/index.html
@@ -952,7 +952,7 @@
     </div>
     <div style="display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:1rem;">
 
-      <a href="https://www.thesimsresource.com/members/MychQQQ/downloads/details/category/sims4-lots-residential/title/old-victorian-manor/" target="_blank" class="cc-card">
+      <a href="https://www.thesimsresource.com/downloads/details/category/sims4-lots-residential/title/old-victorian-manor/id/1614467/" target="_blank" class="cc-card">
         <div class="cc-icon">🏰</div>
         <div class="cc-info">
           <div class="cc-name">Old Victorian Manor</div>
@@ -962,22 +962,22 @@
         </div>
       </a>
 
-      <a href="https://www.curseforge.com/sims4/lots/victorian-manor" target="_blank" class="cc-card">
+      <a href="https://www.thesimsresource.com/downloads/details/category/sims4-lots-residential/title/victorian-manor-no-cc/id/1755198/" target="_blank" class="cc-card">
         <div class="cc-icon">🌿</div>
         <div class="cc-info">
-          <div class="cc-name">Victorian Manor</div>
+          <div class="cc-name">Victorian Manor — NO CC</div>
           <div class="cc-author">par PlumbobKingdom</div>
-          <div class="cc-desc">Plus de 13 000 téléchargements. Jardin, façade pierre, très proche de l'inspi.</div>
-          <div class="cc-site">curseforge.com →</div>
+          <div class="cc-desc">Manoir en pierre élégant, sans CC requis. Façade classique, intérieur spacieux.</div>
+          <div class="cc-site">thesimsresource.com →</div>
         </div>
       </a>
 
-      <a href="https://www.thesimsresource.com/downloads/search/?q=victorian+garden&gentype=lots&game=sims4" target="_blank" class="cc-card">
+      <a href="https://www.thesimsresource.com/themes/victorian/downloads/browse/category/sims4-lots/" target="_blank" class="cc-card">
         <div class="cc-icon">🌸</div>
         <div class="cc-info">
-          <div class="cc-name">Victorian Garden Lots</div>
-          <div class="cc-author">TSR — recherche</div>
-          <div class="cc-desc">Tous les lots victoriens avec jardin sur The Sims Resource, filtrés pour toi.</div>
+          <div class="cc-name">Tous les Lots Victoriens</div>
+          <div class="cc-author">TSR — collection complète</div>
+          <div class="cc-desc">Toute la sélection de maisons victoriennes sur The Sims Resource, triées pour toi.</div>
           <div class="cc-site">thesimsresource.com →</div>
         </div>
       </a>
@@ -995,7 +995,7 @@
       <a href="https://www.musthavemods.com/sims-4-gothic-furniture-cc/" target="_blank" class="cc-card">
         <div class="cc-icon">💀</div>
         <div class="cc-info">
-          <div class="cc-name">Gothic Furniture CC Pack</div>
+          <div class="cc-name">Gothic Furniture CC</div>
           <div class="cc-author">Must Have Mods</div>
           <div class="cc-desc">Crânes, bougies fonctionnelles, lits à baldaquin, cheminées, miroirs gothiques.</div>
           <div class="cc-site">musthavemods.com →</div>
@@ -1032,33 +1032,33 @@
     </div>
     <div style="display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:1rem;">
 
-      <a href="https://www.thesimsresource.com/downloads/search/?q=gaming+setup&gentype=objects&game=sims4" target="_blank" class="cc-card">
+      <a href="https://snootysims.com/wiki/sims-4/latest-sims-4-computers-custom-content/" target="_blank" class="cc-card">
         <div class="cc-icon">💻</div>
         <div class="cc-info">
-          <div class="cc-name">Gaming Setup CC</div>
-          <div class="cc-author">The Sims Resource</div>
-          <div class="cc-desc">PC double/triple écran fonctionnel, bureau, chaise gaming. Tous fonctionnels en jeu.</div>
-          <div class="cc-site">thesimsresource.com →</div>
+          <div class="cc-name">Gaming & Computer CC</div>
+          <div class="cc-author">Snooty Sims</div>
+          <div class="cc-desc">PC fonctionnels, setups complets, écrans multiples. Liste mise à jour régulièrement.</div>
+          <div class="cc-site">snootysims.com →</div>
         </div>
       </a>
 
-      <a href="https://www.wewantmods.com/sims-4-gaming-room-cc/" target="_blank" class="cc-card">
+      <a href="https://wewantmods.com/sims-4-gaming-room-cc/" target="_blank" class="cc-card">
         <div class="cc-icon">🕹️</div>
         <div class="cc-info">
-          <div class="cc-name">31 Gaming Room CC</div>
+          <div class="cc-name">31+ Gaming Room CC</div>
           <div class="cc-author">We Want Mods</div>
-          <div class="cc-desc">Liste complète et organisée : écrans, consoles PS5/Switch fonctionnelles, leds, clutter.</div>
+          <div class="cc-desc">Liste complète et organisée : PC fonctionnel, chaise gaming, leds, consoles, clutter.</div>
           <div class="cc-site">wewantmods.com →</div>
         </div>
       </a>
 
-      <a href="https://www.curseforge.com/sims4/search?search=gaming+room+dark" target="_blank" class="cc-card">
+      <a href="https://www.thesimsresource.com/downloads/browse/category/sims4-objects-furnishing-electronics-computers/" target="_blank" class="cc-card">
         <div class="cc-icon">🎧</div>
         <div class="cc-info">
-          <div class="cc-name">Dark Gaming Room</div>
-          <div class="cc-author">CurseForge</div>
-          <div class="cc-desc">Chambres gamer complètes à télécharger, style sombre avec leds violettes.</div>
-          <div class="cc-site">curseforge.com →</div>
+          <div class="cc-name">Tous les PC & Écrans CC</div>
+          <div class="cc-author">The Sims Resource</div>
+          <div class="cc-desc">Catalogue complet d'ordinateurs et setups pour Sims 4 sur TSR.</div>
+          <div class="cc-site">thesimsresource.com →</div>
         </div>
       </a>
 
