--- a/index.html
+++ b/index.html
@@ -798,6 +798,13 @@
           Programmeuse brillante le jour, guerrière-archère-lectrice la nuit. Son désordre est organisé : elle sait exactement où est chaque chose dans son chaos.
         </div>
       </li>
+      <li>
+        <span class="trait-icon">🎨</span>
+        <div>
+          <span class="trait-label">Âme d'artiste</span>
+          Tricot, peinture, poterie — Selene crée avec ses mains autant qu'avec son cerveau. Son atelier est un sanctuaire de chaos coloré caché quelque part dans la maison.
+        </div>
+      </li>
     </ul>
 
     <div>
@@ -962,22 +969,22 @@
         </div>
       </a>
 
-      <a href="https://www.thesimsresource.com/downloads/details/category/sims4-lots-residential/title/victorian-manor-no-cc/id/1755198/" target="_blank" class="cc-card">
+      <a href="https://www.reddit.com/r/thesims/comments/mquck6/i_built_my_for_real_dream_home_historic_gothic/?tl=fr" target="_blank" class="cc-card">
         <div class="cc-icon">🌿</div>
         <div class="cc-info">
-          <div class="cc-name">Victorian Manor — NO CC</div>
-          <div class="cc-author">par PlumbobKingdom</div>
-          <div class="cc-desc">Manoir en pierre élégant, sans CC requis. Façade classique, intérieur spacieux.</div>
-          <div class="cc-site">thesimsresource.com →</div>
+          <div class="cc-name">Historic Gothic Dream Home</div>
+          <div class="cc-author">Reddit — r/thesims</div>
+          <div class="cc-desc">Une vraie maison gothique historique construite dans les Sims. Très proche de l'univers de Selene.</div>
+          <div class="cc-site">reddit.com →</div>
         </div>
       </a>
 
-      <a href="https://www.thesimsresource.com/themes/victorian/downloads/browse/category/sims4-lots/" target="_blank" class="cc-card">
+      <a href="https://www.thesimsresource.com/themes/goth/downloads/details/category/sims4-lots-residential/title/black-nightmare-house/id/1718980/" target="_blank" class="cc-card">
         <div class="cc-icon">🌸</div>
         <div class="cc-info">
-          <div class="cc-name">Tous les Lots Victoriens</div>
-          <div class="cc-author">TSR — collection complète</div>
-          <div class="cc-desc">Toute la sélection de maisons victoriennes sur The Sims Resource, triées pour toi.</div>
+          <div class="cc-name">Black Nightmare House</div>
+          <div class="cc-author">The Sims Resource</div>
+          <div class="cc-desc">Maison gothique sombre sur TSR — pour l'ambiance extérieure et les détails architecturaux.</div>
           <div class="cc-site">thesimsresource.com →</div>
         </div>
       </a>
@@ -1032,32 +1039,72 @@
     </div>
     <div style="display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:1rem;">
 
-      <a href="https://snootysims.com/wiki/sims-4/latest-sims-4-computers-custom-content/" target="_blank" class="cc-card">
+      <a href="https://www.thesimsresource.com/promotion/gamer-gear" target="_blank" class="cc-card">
         <div class="cc-icon">💻</div>
         <div class="cc-info">
-          <div class="cc-name">Gaming & Computer CC</div>
-          <div class="cc-author">Snooty Sims</div>
-          <div class="cc-desc">PC fonctionnels, setups complets, écrans multiples. Liste mise à jour régulièrement.</div>
-          <div class="cc-site">snootysims.com →</div>
+          <div class="cc-name">Gamer Gear CC</div>
+          <div class="cc-author">The Sims Resource</div>
+          <div class="cc-desc">Collection officielle TSR dédiée au gaming — PC, écrans, chaises, setups complets fonctionnels.</div>
+          <div class="cc-site">thesimsresource.com →</div>
+        </div>
+      </a>
+
+      <a href="https://www.thesimsresource.com/promotion/cozy_gamer_day" target="_blank" class="cc-card">
+        <div class="cc-icon">🕹️</div>
+        <div class="cc-info">
+          <div class="cc-name">Cozy Gamer Day CC</div>
+          <div class="cc-author">The Sims Resource</div>
+          <div class="cc-desc">Collection cozy gamer sur TSR — ambiance chaleureuse et gamer à la fois, parfait pour Selene.</div>
+          <div class="cc-site">thesimsresource.com →</div>
         </div>
       </a>
 
       <a href="https://wewantmods.com/sims-4-gaming-room-cc/" target="_blank" class="cc-card">
-        <div class="cc-icon">🕹️</div>
+        <div class="cc-icon">🎧</div>
         <div class="cc-info">
           <div class="cc-name">31+ Gaming Room CC</div>
           <div class="cc-author">We Want Mods</div>
-          <div class="cc-desc">Liste complète et organisée : PC fonctionnel, chaise gaming, leds, consoles, clutter.</div>
+          <div class="cc-desc">Liste complète : PC fonctionnel, chaise gaming, leds violettes, consoles, clutter.</div>
           <div class="cc-site">wewantmods.com →</div>
         </div>
       </a>
 
-      <a href="https://www.thesimsresource.com/downloads/browse/category/sims4-objects-furnishing-electronics-computers/" target="_blank" class="cc-card">
-        <div class="cc-icon">🎧</div>
+    </div>
+  </div>
+
+  <!-- ARTS & CRÉATIF -->
+  <div style="margin-bottom:3rem;">
+    <div style="font-size:0.6rem; letter-spacing:0.4em; color:var(--or-punk); text-transform:uppercase; margin-bottom:1.5rem; display:flex; align-items:center; gap:1rem;">
+      <span>🎨</span> Arts & Créatif — Tricot, Peinture, Poterie
+    </div>
+    <div style="display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:1rem;">
+
+      <a href="https://www.thesimsresource.com/promotion/arts_and_crafts" target="_blank" class="cc-card">
+        <div class="cc-icon">🧶</div>
         <div class="cc-info">
-          <div class="cc-name">Tous les PC & Écrans CC</div>
+          <div class="cc-name">Arts & Crafts CC</div>
           <div class="cc-author">The Sims Resource</div>
-          <div class="cc-desc">Catalogue complet d'ordinateurs et setups pour Sims 4 sur TSR.</div>
+          <div class="cc-desc">Collection complète dédiée aux arts créatifs — tricot, peinture, poterie, artisanat. Tout pour l'âme créative de Selene.</div>
+          <div class="cc-site">thesimsresource.com →</div>
+        </div>
+      </a>
+
+      <a href="https://www.tumblr.com/search/sims+4+pottery+cc" target="_blank" class="cc-card">
+        <div class="cc-icon">🏺</div>
+        <div class="cc-info">
+          <div class="cc-name">Pottery & Art CC</div>
+          <div class="cc-author">Simblr Tumblr</div>
+          <div class="cc-desc">Tours de poterie décoratifs, chevalets, toiles, sculptures. Décoration d'atelier d'artiste.</div>
+          <div class="cc-site">tumblr.com →</div>
+        </div>
+      </a>
+
+      <a href="https://www.thesimsresource.com/downloads/browse/category/sims4-objects-hobbies-misc/" target="_blank" class="cc-card">
+        <div class="cc-icon">🖌️</div>
+        <div class="cc-info">
+          <div class="cc-name">Hobbies & Loisirs CC</div>
+          <div class="cc-author">The Sims Resource</div>
+          <div class="cc-desc">Tous les objets de loisirs créatifs sur TSR — pour aménager le coin atelier de Selene.</div>
           <div class="cc-site">thesimsresource.com →</div>
         </div>
       </a>
