--- a/index.html
+++ b/index.html
@@ -1089,22 +1089,22 @@
         </div>
       </a>
 
-      <a href="https://www.tumblr.com/search/sims+4+pottery+cc" target="_blank" class="cc-card">
-        <div class="cc-icon">🏺</div>
+      <a href="https://s4cc.syboulette.fr/wisteria-cc-sims-4/" target="_blank" class="cc-card">
+        <div class="cc-icon">🌸</div>
         <div class="cc-info">
-          <div class="cc-name">Pottery & Art CC</div>
-          <div class="cc-author">Simblr Tumblr</div>
-          <div class="cc-desc">Tours de poterie décoratifs, chevalets, toiles, sculptures. Décoration d'atelier d'artiste.</div>
-          <div class="cc-site">tumblr.com →</div>
+          <div class="cc-name">Glycine CC — Set Modulaire</div>
+          <div class="cc-author">Syboulette</div>
+          <div class="cc-desc">Le set glycine parfait : 2 arbres, pièces murales modulables, tunnel voûté. Couvre les murs, les pergolas, les façades. Violet ou blanc.</div>
+          <div class="cc-site">s4cc.syboulette.fr →</div>
         </div>
       </a>
 
-      <a href="https://www.thesimsresource.com/downloads/browse/category/sims4-objects-hobbies-misc/" target="_blank" class="cc-card">
-        <div class="cc-icon">🖌️</div>
+      <a href="https://www.thesimsresource.com/downloads/details/category/sims4-objectrecolors-buildmode-plantstrees/title/how-does-your-garden-grow-hanging-wisteria/id/1562896/" target="_blank" class="cc-card">
+        <div class="cc-icon">💜</div>
         <div class="cc-info">
-          <div class="cc-name">Hobbies & Loisirs CC</div>
-          <div class="cc-author">The Sims Resource</div>
-          <div class="cc-desc">Tous les objets de loisirs créatifs sur TSR — pour aménager le coin atelier de Selene.</div>
+          <div class="cc-name">Hanging Wisteria CC</div>
+          <div class="cc-author">seimar8 — TSR</div>
+          <div class="cc-desc">Glycine tombante à suspendre sur les murs et pergolas. Idéale pour habiller la façade du manoir de Selene.</div>
           <div class="cc-site">thesimsresource.com →</div>
         </div>
       </a>
